<resources>
    <string name="app_name">Myxa</string>
    <string name="logo">LOGO</string>


    <string name="button_sign_up">SIGN UP</string>
    <string name="button_log_in">LOG IN</string>
    <string name="button_rider_portal">Rider Portal</string>
    <string name="button_customer_portal">Customer Portal</string>

    <string name="no_account_yet">No account yet?</string>
    <string name="register_here">Register Here</string>

    <string name="select_account_type">Select Account Type</string>
    <string name="select_one_of_the_choice_above">Select one of the choice above</string>

    <string name="btn_continue">Continue</string>
    <string name="btn_checkout">Checkout</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="empty_field">Field must not be empty</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="invalid_confirm_password">Passwords do not match</string>

    <string name="label_ongoing">Ongoing</string>
    <string name="label_past">Past</string>

    <string name="toast_login_failed">"Login failed"</string>
    <string name="toast_signup_failed">"Sign-up failed"</string>

    <string name="action_continue_rider">"Continue"</string>
    <string name="prompt_plate_number">"Plate Number"</string>
    <string name="prompt_license_number">"License Number"</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="title_home">Home</string>
    <string name="title_schedule">Diet Schedule</string>
    <string name="title_cart">Your Cart</string>

    <string name="nav_for_you">For You</string>
    <string name="nav_your_fave">Favorites</string>
    <string name="nav_deliveries">Deliveries</string>

    <string name="home_fragment_text">This is the home fragment</string>
    <string name="diet_schedule_fragment_text">This is the diet schedule fragment</string>
    <string name="your_cart_fragment_text">This is the your cart fragment</string>

    <string name="scheduled">Scheduled</string>
    <string name="driver_on_the_way">Driver on the Way</string>

    <string name="load_ingredients_here">-load ingredients here-</string>
    <string name="content">Content</string>
    <string name="ingredients">Ingredients</string>
    <string name="procedure">Procedure</string>
    <string name="x">X</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="f">F</string>
    <string name="load_procedure_here">- load procedure here-</string>
    <string name="php">PhP</string>
    <string name="price_here">- price here -</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="todo">TODO</string>

    <string name="diet_schedule_year_text">0000</string>
    <string name="diet_schedule_date_text">0000</string>
    <string name="diet_plan_popup_close">Close</string>

    <string name="diet_plan_diet_name">My Vegetarian Diet</string>
    <string name="diet_plan_calories">2,500 Avg. Calorie Count</string>
    <string name="diet_plan_description_header">Description</string>
    <string name="diet_plan_description_main">A vegetarian diet does not include any meat, poultry, or seafood. It is a meal plan made up of foods that come mostly from plants. Vegetarians also do not eat products containing gelatin or rennin (an enzyme found in calf\'s stomachs that is used to produce many cheeses).</string>
    <string name="diet_plan_food_options_header">Food Options</string>
    <string name="diet_plan_food_options_edit_button">Edit</string>
    <string name="diet_plan_food_options_recipe_one">Vegan Chilli</string>
    <string name="diet_plan_food_options_recipe_two">Kale Stew</string>
    <string name="diet_plan_food_options_recipe_three">Vegan Pie</string>
    <string name="diet_plan_food_options_prep_time_recipe_one">12 - 30 minutes</string>
    <string name="diet_plan_food_options_prep_time_recipe_two">10 - 25 minutes</string>
    <string name="diet_plan_food_options_prep_time_recipe_three">16 - 20 minutes</string>
    <string name="diet_plan_food_add_to_cart_button">Set Diet Plan</string>
    <string name="log_in_as_rider">Log In as Rider</string>

    <string name="rider_header">Navigation</string>
    <string name="history">View History</string>


</resources>
