<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ui.signup.customer.SignupActivity">

    <ImageView
        android:id="@+id/imageView_logo_header2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/ic_logo_header_background"
        android:contentDescription="@string/logo"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/myxa_512" />

    <TextView
        android:id="@+id/register_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/raleway"
        android:text="@string/select_account_type"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo_header2" />

    <TextView
        android:id="@+id/select_choices_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_one_of_the_choice_above"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_portal_button" />

    <Button
        android:id="@+id/rider_portal_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_rectangle_23"
        android:drawableStart="@drawable/ic_vector"
        android:fontFamily="@font/raleway_bold"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/button_rider_portal"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/customer_portal_button"
        app:layout_constraintEnd_toEndOf="@+id/register_textView"
        app:layout_constraintStart_toStartOf="@+id/register_textView"
        app:layout_constraintTop_toBottomOf="@+id/register_textView" />

    <Button
        android:id="@+id/customer_portal_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_rectangle_23"
        android:backgroundTint="@color/colorAccent"
        android:drawableStart="@drawable/ic_vector_1"
        android:fontFamily="@font/raleway_bold"
        android:paddingStart="16dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/button_customer_portal"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/select_choices_textView"
        app:layout_constraintEnd_toEndOf="@+id/rider_portal_button"
        app:layout_constraintStart_toStartOf="@+id/rider_portal_button"
        app:layout_constraintTop_toBottomOf="@+id/rider_portal_button" />

</androidx.constraintlayout.widget.ConstraintLayout>