<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/diet_plan_main_layout"
    android:layout_width="330dp"
    android:layout_height="570dp"
    android:background="@color/colorWhite"
    android:layout_gravity="center">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/diet_plan_heart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_heart_24"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <LinearLayout
        android:id="@+id/diet_plan_header_card"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="439dp"
        android:background="@drawable/bg_diet_plan_header_card"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/diet_plan_header_card_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="46dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/diet_plan_diet_name"
                android:textColor="@color/colorWhite"
                android:textSize="32sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/diet_plan_calories"
                android:textColor="@color/colorWhite"
                android:textSize="16sp">

            </TextView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/diet_plan_description_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="223dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_plan_header_card"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:text="@string/diet_plan_description_header"
            android:textColor="@color/colorBlack"
            android:textSize="32sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:text="@string/diet_plan_description_main"
            android:textColor="@color/colorBlack"
            android:textSize="16sp">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_plan_description_card"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/diet_plan_food_options_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:text="@string/diet_plan_food_options_header"
                android:textColor="@color/colorBlack"
                android:textSize="32sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/diet_plan_food_options_recipe"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:background="@color/viewBackground">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/food_options_recipe_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="50dp"
                        android:text="@string/diet_plan_food_options_recipe_one"
                        android:textSize="16sp">

                    </TextView>

                    <TextView
                        android:id="@+id/food_options_prep_time_recipe_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:paddingStart="70dp"
                        android:paddingEnd="10dp"
                        android:text="@string/diet_plan_food_options_prep_time_recipe_one"
                        android:textSize="16sp">

                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/food_options_recipe_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="50dp"
                        android:text="@string/diet_plan_food_options_recipe_two"
                        android:textSize="16sp">

                    </TextView>

                    <TextView
                        android:id="@+id/food_options_prep_time_recipe_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:paddingStart="70dp"
                        android:paddingEnd="10dp"
                        android:text="@string/diet_plan_food_options_prep_time_recipe_two"
                        android:textSize="16sp">

                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/food_options_recipe_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="50dp"
                        android:text="@string/diet_plan_food_options_recipe_three"
                        android:textSize="16sp">

                    </TextView>

                    <TextView
                        android:id="@+id/food_options_prep_time_recipe_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:paddingStart="70dp"
                        android:paddingEnd="10dp"
                        android:text="@string/diet_plan_food_options_prep_time_recipe_three"
                        android:textSize="16sp">

                    </TextView>
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_diet_plan_add_to_cart_design"
            android:text="@string/diet_plan_food_add_to_cart_button">
        </Button>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/diet_plan_edit_button"
        android:layout_width= "wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/bg_diet_plan_edit_button_design"
        android:src="@drawable/ic_edit_24dp"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>
